# LanScan

./: .gitattributes  .gitignore  ALERT_SYSTEM_TESTING.md  API_DOCUMENTATION.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  PHASE_10_SUMMARY.md  PHASE_10_TEST_QUALITY_REPORT.md  PHASE_11_SUMMARY.md  README.md  TODO.md  USER_MANUAL.md  add_comments_to_table.md  build_log.txt  project.md
.claude/: settings.local.json
docs/: bandwidth-server-spec.md  dns-improvements.md  oui-database-strategy.md  widgets-guide.md
docs/phases/: phase-0-foundation.md  phase-1-network-discovery.md  phase-10-testing-qa.md  phase-11-documentation-release.md  phase-12-post-release-maintenance.md  phase-2-metrics-diagnostics.md  phase-3-persistence.md  phase-4-controllers.md  phase-5-ui-foundation.md  phase-6-charts-visualization.md  phase-7-advanced-diagnostics.md  phase-8-advanced-features.md  phase-9-ui-polish.md
include/charts/: JitterChart.h  LatencyChart.h  PacketLossChart.h
include/config/: ConfigValidator.h  SettingsManager.h
include/controllers/: ExportController.h  MetricsController.h  ScanController.h
include/coordinators/: ScanCoordinator.h
include/database/: DatabaseManager.h  DeviceCache.h  DeviceRepository.h  HistoryDao.h  MetricsDao.h
include/delegates/: QualityScoreDelegate.h  StatusDelegate.h
include/diagnostics/: BandwidthTester.h  DnsDiagnostics.h  MtuDiscovery.h  TraceRouteService.h
include/export/: CsvExporter.h  HtmlReportGenerator.h  JsonExporter.h  XmlExporter.h
include/managers/: FavoritesManager.h  LanguageManager.h  ProfileManager.h  ThemeManager.h
include/models/: Alert.h  TraceRouteHop.h
include/services/: AlertService.h  HistoryService.h  MonitoringService.h  WakeOnLanService.h
include/utils/: AnimationHelper.h  IconLoader.h  ProgressTracker.h  TooltipHelper.h
include/viewmodels/: ChartViewModel.h  DeviceTableViewModel.h  MetricsViewModel.h  ScanConfigViewModel.h
include/views/: BandwidthTestDialog.h  DeviceDetailDialog.h  DeviceTableWidget.h  FavoritesWidget.h  MainWindow.h  MetricsWidget.h  ProfileDialog.h  ScanConfigDialog.h  SettingsDialog.h  TrendsWidget.h
include/widgets/: GradientProgressBar.h  NetworkActivityIndicator.h  QualityGauge.h
resources/: resources.qrc
resources/styles/: dark.qss  light.qss
scripts/: OUI_DATABASE_README.md  download_oui.py  oui_database.txt
src/: main.cpp  version.h.in
src/charts/: JitterChart.cpp  LatencyChart.cpp  PacketLossChart.cpp
src/config/: ConfigValidator.cpp  SettingsManager.cpp
src/controllers/: ExportController.cpp  MetricsController.cpp  ScanController.cpp
src/coordinators/: ScanCoordinator.cpp
src/database/: DatabaseManager.cpp  DeviceCache.cpp  DeviceRepository.cpp  HistoryDao.cpp  MetricsDao.cpp
src/delegates/: QualityScoreDelegate.cpp  StatusDelegate.cpp
src/diagnostics/: BandwidthTester.cpp  DnsDiagnostics.cpp  MtuDiscovery.cpp  TraceRouteService.cpp
src/export/: CsvExporter.cpp  HtmlReportGenerator.cpp  JsonExporter.cpp  XmlExporter.cpp
src/interfaces/: IDeviceRepository.h  IExporter.h  IMetricsCalculator.h  IScanStrategy.h
src/managers/: FavoritesManager.cpp  LanguageManager.cpp  ProfileManager.cpp  ThemeManager.cpp
src/models/: Alert.cpp  Device.cpp  Device.h  NetworkInterface.cpp  NetworkInterface.h  NetworkMetrics.cpp  NetworkMetrics.h  PortInfo.cpp  PortInfo.h  TraceRouteHop.cpp
src/network/diagnostics/: JitterCalculator.cpp  JitterCalculator.h  LatencyCalculator.cpp  LatencyCalculator.h  MetricsAggregator.cpp  MetricsAggregator.h  PacketLossCalculator.cpp  PacketLossCalculator.h  PingService.cpp  PingService.h  PortScanner.cpp  PortScanner.h  QualityScoreCalculator.cpp  QualityScoreCalculator.h
src/network/discovery/: ArpDiscovery.cpp  ArpDiscovery.h  DnsResolver.cpp  DnsResolver.h  HostDiscovery.cpp  HostDiscovery.h
src/services/: AlertService.cpp  HistoryService.cpp  MonitoringService.cpp  SystemInfoCollector.cpp  SystemInfoCollector.h  SystemValidator.cpp  SystemValidator.h  WakeOnLanService.cpp
src/utils/: AnimationHelper.cpp  IconLoader.cpp  IpAddressValidator.cpp  IpAddressValidator.h  Logger.cpp  Logger.h  StatisticsCalculator.cpp  StatisticsCalculator.h  StringFormatter.cpp  StringFormatter.h  TimeFormatter.cpp  TimeFormatter.h  TooltipHelper.cpp
src/viewmodels/: ChartViewModel.cpp  DeviceTableViewModel.cpp  MetricsViewModel.cpp  ScanConfigViewModel.cpp
src/views/: AboutDialog.cpp  AboutDialog.h  BandwidthTestDialog.cpp  DeviceDetailDialog.cpp  DeviceTableWidget.cpp  FavoritesWidget.cpp  MainWindow.cpp  MetricsWidget.cpp  ProfileDialog.cpp  ScanConfigDialog.cpp  SettingsDialog.cpp  TrendsWidget.cpp  bandwidthtestdialog.ui
src/widgets/: GradientProgressBar.cpp  NetworkActivityIndicator.cpp  QualityGauge.cpp
tests/: AlertServiceTest.cpp  BandwidthTesterTest.cpp  CMakeLists.txt  ChartViewModelTest.cpp  CsvExporterTest.cpp  DeviceRepositoryTest.cpp  DeviceTableViewModelTest.cpp  DnsDiagnosticsTest.cpp  ExportControllerTest.cpp  HistoryDaoTest.cpp  HistoryServiceTest.cpp  HtmlReportGeneratorTest.cpp  IntegrationTests.cpp  JsonExporterTest.cpp  MacVendorLookupTest.cpp  MetricsControllerTest.cpp  MetricsDaoTest.cpp  MetricsViewModelTest.cpp  MonitoringServiceTest.cpp  MtuDiscoveryTest.cpp  PerformanceTests.cpp  ScanConfigViewModelTest.cpp  ScanControllerTest.cpp  SettingsManagerTest.cpp  ThemeManagerTest.cpp  TraceRouteServiceTest.cpp  WakeOnLanServiceTest.cpp  XmlExporterTest.cpp
tests/models/: DeviceTest.cpp  NetworkMetricsTest.cpp
tests/network/: ArpDiscoveryTest.cpp  DnsResolverTest.cpp  HostDiscoveryTest.cpp  IpScannerTest.cpp  JitterCalculatorTest.cpp  LatencyCalculatorTest.cpp  PacketLossCalculatorTest.cpp  PingServiceTest.cpp  QualityScoreCalculatorTest.cpp  SubnetCalculatorTest.cpp
tests/utils/: IpAddressValidatorTest.cpp  LoggerTest.cpp  StatisticsCalculatorTest.cpp
translations/: lanscan_de.ts  lanscan_es.ts  lanscan_fr.ts  lanscan_it.ts
ui/: MainWindow.ui  devicedetaildialog.ui  devicetablewidget.ui  metricswidget.ui  profiledialog.ui  scanconfigdialog.ui  settingsdialog.ui
(+18 files in other folders)
